[gd_scene load_steps=36 format=2]

[ext_resource path="res://Player/Civil/CivilMoving.gd" type="Script" id=1]
[ext_resource path="res://Player/Civil/CivilIdle.gd" type="Script" id=2]
[ext_resource path="res://Player/Civil/CivilIn_Air.gd" type="Script" id=3]
[ext_resource path="res://Player/Civil/CivilPlayer.gd" type="Script" id=4]
[ext_resource path="res://Updated_Assets/Assets/Player/Template/Template_Death.png" type="Texture" id=5]
[ext_resource path="res://Player/StateMachine/State_Machine.gd" type="Script" id=6]
[ext_resource path="res://Updated_Assets/Assets/Player/1700s/Musket.png" type="Texture" id=7]
[ext_resource path="res://Player/Civil/CivilShooting.gd" type="Script" id=8]
[ext_resource path="res://Updated_Assets/Assets/Player/Template/Template_Run.png" type="Texture" id=9]
[ext_resource path="res://Updated_Assets/Assets/Player/Template/Template_Jump.png" type="Texture" id=10]
[ext_resource path="res://Updated_Assets/Assets/Player/Template/Template_Idle.png" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 14.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 94.0
initial_velocity_random = 0.43
angular_velocity = -11.15
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 120.0
damping_random = 0.24

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 73.39
initial_velocity_random = 0.43
angular_velocity = -11.15
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 120.0
damping_random = 0.24

[node name="Player" type="KinematicBody2D"]
collision_layer = 67
collision_mask = 65
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.875, 0.875 )
frames = SubResource( 3 )
animation = "Idle"
frame = 1
playing = true

[node name="State_Machine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Moving" type="Node" parent="State_Machine"]
script = ExtResource( 1 )

[node name="In_Air" type="Node" parent="State_Machine"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="State_Machine"]
script = ExtResource( 2 )

[node name="Shooting" type="Node" parent="State_Machine"]
script = ExtResource( 8 )

[node name="Detect_Ground" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 128

[node name="Weapon_Joint" type="Node2D" parent="."]
position = Vector2( -1, 3 )
rotation = -6.28319

[node name="Weapon_Sprite" type="Sprite" parent="Weapon_Joint"]
position = Vector2( 4.17412, 1.60522 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 7 )

[node name="Weapon_Muzzle" type="Node2D" parent="Weapon_Joint"]
position = Vector2( 9.5, -0.5 )

[node name="Enemy_Detect" type="RayCast2D" parent="Weapon_Joint/Weapon_Muzzle"]
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 140
collide_with_areas = true

[node name="Beam_End" type="Node2D" parent="Weapon_Joint/Weapon_Muzzle"]
position = Vector2( 500, 0 )

[node name="Particles_Weapon" type="Particles2D" parent="Weapon_Joint/Weapon_Muzzle"]
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.31
local_coords = false
process_material = SubResource( 8 )

[node name="Particles_Enemy" type="Particles2D" parent="Weapon_Joint/Weapon_Muzzle"]
position = Vector2( 151.939, -0.663162 )
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.31
local_coords = false
process_material = SubResource( 7 )
